// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App can render 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <div
      class="boxList"
    >
      <div
        class="boxForm"
      >
        <form>
          <div>
            <label
              for="width"
            >
              Width:
            </label>
            <input
              class="width"
              max="300"
              min="20"
              name="width"
              placeholder="width"
              required=""
              step="20"
              type="number"
              value=""
            />
          </div>
          <div>
            <label
              for="height"
            >
              Height:
            </label>
            <input
              class="height"
              max="300"
              min="20"
              name="height"
              placeholder="height"
              required=""
              step="20"
              type="number"
              value=""
            />
          </div>
          <div>
            <label
              for="color"
            >
              Color:
            </label>
            <select
              class="color"
              id="color"
              name="color"
            >
              <option
                select="true"
                value="purple"
              >
                purple
              </option>
              <option
                value="pink"
              >
                pink
              </option>
              <option
                value="aqua"
              >
                aqua
              </option>
              <option
                value="brown"
              >
                brown
              </option>
            </select>
          </div>
          <button
            class="subBtn"
          >
            Add!
          </button>
        </form>
      </div>
      <div
        class="boxContainer"
      >
        <div
          class="singleBox"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Box list can render 1`] = `
<DocumentFragment>
  <div
    class="singleBox"
  />
</DocumentFragment>
`;

exports[`BoxList can render 1`] = `
<DocumentFragment>
  <div
    class="boxList"
  >
    <div
      class="boxForm"
    >
      <form>
        <div>
          <label
            for="width"
          >
            Width:
          </label>
          <input
            class="width"
            max="300"
            min="20"
            name="width"
            placeholder="width"
            required=""
            step="20"
            type="number"
            value=""
          />
        </div>
        <div>
          <label
            for="height"
          >
            Height:
          </label>
          <input
            class="height"
            max="300"
            min="20"
            name="height"
            placeholder="height"
            required=""
            step="20"
            type="number"
            value=""
          />
        </div>
        <div>
          <label
            for="color"
          >
            Color:
          </label>
          <select
            class="color"
            id="color"
            name="color"
          >
            <option
              select="true"
              value="purple"
            >
              purple
            </option>
            <option
              value="pink"
            >
              pink
            </option>
            <option
              value="aqua"
            >
              aqua
            </option>
            <option
              value="brown"
            >
              brown
            </option>
          </select>
        </div>
        <button
          class="subBtn"
        >
          Add!
        </button>
      </form>
    </div>
    <div
      class="boxContainer"
    >
      <div
        class="singleBox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`NewBoxListForm list can render 1`] = `
<DocumentFragment>
  <div
    class="boxForm"
  >
    <form>
      <div>
        <label
          for="width"
        >
          Width:
        </label>
        <input
          class="width"
          max="300"
          min="20"
          name="width"
          placeholder="width"
          required=""
          step="20"
          type="number"
          value=""
        />
      </div>
      <div>
        <label
          for="height"
        >
          Height:
        </label>
        <input
          class="height"
          max="300"
          min="20"
          name="height"
          placeholder="height"
          required=""
          step="20"
          type="number"
          value=""
        />
      </div>
      <div>
        <label
          for="color"
        >
          Color:
        </label>
        <select
          class="color"
          id="color"
          name="color"
        >
          <option
            select="true"
            value="purple"
          >
            purple
          </option>
          <option
            value="pink"
          >
            pink
          </option>
          <option
            value="aqua"
          >
            aqua
          </option>
          <option
            value="brown"
          >
            brown
          </option>
        </select>
      </div>
      <button
        class="subBtn"
      >
        Add!
      </button>
    </form>
  </div>
</DocumentFragment>
`;
